Update NPM package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fundament",
+  "name": "fundament-npm",
   "version": "0.1.2",
   "description": "The modern and lightweight front-end framework built on the shoulders of giants.",
   "keywords": [
