--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "css"
   ],
   "homepage": "https://getfundament.com",
+  "repository": {
+    "url": "https://github.com/getfundament/fundament",
+    "type": "git"
+  },
   "author": "Jason Koolman and The Fundament Authors",
   "license": "MIT",
   "dependencies": {},
