--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
   },
   "author": "Jason Koolman and The Fundament Authors",
   "license": "MIT",
-  "dependencies": {},
   "devDependencies": {
+    "babel-preset-es2015": "^6.24.1",
+    "babelify": "^7.3.0",
+    "browserify": "^14.4.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
     "gulp-concat": "^2.6.0",
@@ -30,10 +32,13 @@
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.4.1",
-    "gulp-typescript": "^3.2.1",
     "gulp-uglify": "^2.0.0",
     "gulp-watch": "^4.3.10",
-    "typescript": "^2.4.2"
+    "tsify": "^3.0.1",
+    "typescript": "^2.4.2",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0",
+    "@types/jquery": "^3.2.11"
   },
   "scripts": {
     "test": "exit 1"
