--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "author": "Jason Koolman and The Fundament Authors",
   "license": "MIT",
   "devDependencies": {
+    "@types/jquery": "^3.2.12",
     "babel-preset-es2015": "^6.24.1",
     "babelify": "^7.3.0",
     "browserify": "^14.4.0",
@@ -37,8 +38,7 @@
     "tsify": "^3.0.1",
     "typescript": "^2.4.2",
     "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0",
-    "@types/jquery": "^3.2.11"
+    "vinyl-source-stream": "^1.1.0"
   },
   "scripts": {
     "test": "exit 1"
